--- a/gateway-service/src/main/resources/application.yml
+++ b/gateway-service/src/main/resources/application.yml
@@ -9,7 +9,7 @@ spring:
     gateway:
       discovery:
         locator:
-          enabled: true   # Eureka'dan otomatik servis keşfi
+          enabled: true
           lower-case-service-id: true
       routes:
         - id: movie-service
@@ -17,7 +17,7 @@ spring:
           predicates:
             - Path=/movie-service/**
           filters:
-            - StripPrefix=1  # "/movie-service" kısmını kaldırır
+            - StripPrefix=1
 
 eureka:
   client:
