--- a/movie-service/src/main/resources/application.yml
+++ b/movie-service/src/main/resources/application.yml
@@ -5,6 +5,20 @@ spring:
   application:
     name: movie-service
 
+  datasource:
+    url: jdbc:postgresql://localhost:5432/movie_db
+    username: movie_user
+    password: movie_pass
+    driver-class-name: org.postgresql.Driver
+
+  jpa:
+    hibernate:
+      ddl-auto: update
+    show-sql: true
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.PostgreSQLDialect
+
 eureka:
   client:
     service-url:
